# Proiect-POO3

./: CMakeLists.txt  Meciuri_bilet  README.md  agentie.h  baschet.cpp  baschet.h  bilet.cpp  bilet.h  bilet_proxy.h  erori.h  fotbal.cpp  fotbal.h  main.cpp  sport.cpp  sport.h  sport_factory.h  tenis.cpp  tenis.h
